Add report page.

--- a/advertiser_management/templates/advertiser_management/ad_list.html
+++ b/advertiser_management/templates/advertiser_management/ad_list.html
@@ -7,6 +7,7 @@
     <title>Ad View</title>
 </head>
 <button onclick="location.href='{% url 'AdFormView' %}'">Add ad</button>
+<button onclick="location.href='{% url 'ReportView' %}'">Report</button>
 <body>
 <div class="container" dir="rtl">
     {% for advertiser in object_list %}
